package br.com.ajf.learnjavadesignpatterns.interceptingfilter;

public final class Client
{
	private FilterManager filterManager;

	public void setFilterManager(FilterManager filterManager)
	{
		this.filterManager = filterManager;
	}

	public void sendRequest(String request)
	{
		filterManager.filterRequest(request);
	}
}
