package br.com.ajf.learnjavadesignpatterns.interceptingfilter;

public final class DebugFilter implements Filter
{
	@Override
	public void execute(String request)
	{
		System.out.println("Debug: "+request);
	}
}
