package br.com.ajf.learnjavadesignpatterns.interceptingfilter;

public interface Filter
{
	void execute(String request);
}
